--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            bash ~/deploy.sh fiv5-0.0.1-SNAPSHOT.jar
+            bash ~/deploy.sh fiv5-0.0.1-SNAPSHOT.jar prod
